--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pokedex",
+  "description": "A simple Pokedex app built with Expo and React Native",
   "private": true,
   "main": "expo-router/entry",
   "version": "1.0.0",
@@ -15,6 +16,7 @@
     "expo-font": "~13.0.4",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
+    "expo-system-ui": "^4.0.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
