--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
