--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-font": "~13.0.4",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
