--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.74.4",
-    "expo": "~52.0.46",
-    "expo-font": "~13.0.4",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "^4.0.9",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-svg": "15.8.0",
-    "zustand": "^5.0.3"
+    "@tanstack/react-query": "^5.75.4",
+    "expo": "^53.0.7",
+    "expo-font": "~13.3.1",
+    "expo-router": "~5.0.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-svg": "15.11.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@types/react": "~18.3.20",
+    "@babel/core": "^7.27.1",
+    "@types/react": "~19.0.10",
     "typescript": "^5.8.3"
   }
 }
